refactor: update API using new Stream API
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>